--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                     <li class="link-header2">
                         <a href="mailto:info@example.com" class="contacts ">
                             <svg class="mail-svg" >
-                                <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-envelope">
+                                <use href="./images/svg/sprite.svg#icon-envelope">
     
                                 </use>
                             </svg>
@@ -36,7 +36,7 @@
                     <li class="link-header3">
                         <a href="tel:+380991111111" class="contacts">
                         <svg class="phone-svg" >
-                            <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-smartphone">
+                            <use href="./images/svg/sprite.svg#icon-smartphone">
     
                             </use>
                         </svg>
@@ -179,28 +179,28 @@
                 <li class="instagram2">
                     <a href="" class="instagram-link2">
                     <svg class="instagram-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-instagram"></use>
+                        <use href="./images/svg/sprite.svg#icon-instagram"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="twitter2">
                     <a href="" class="twitter-link2">
                     <svg class="twitter-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-twitter"></use>
+                        <use href="./images/svg/sprite.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="facebook2">
                     <a href="" class="facebook-link2">
                     <svg class="facebook-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-facebook"></use>
+                        <use href="./images/svg/sprite.svg#icon-facebook"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="linkedin2">
                     <a href="" class="linkedin-link2">
                     <svg class="linkedin-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                     </svg>
                 </a>
                 </li>
