--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="link-header2">
                     <a href="mailto:info@example.com" class="contacts ">
                         <svg class="mail-svg" >
-                            <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-envelope">
+                            <use href="./images/svg/sprite.svg#icon-envelope">
 
                             </use>
                         </svg>
@@ -36,7 +36,7 @@
                 <li class="link-header3">
                     <a href="tel:+380991111111" class="contacts">
                     <svg class="phone-svg" >
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-smartphone">
+                        <use href="./images/svg/sprite.svg#icon-smartphone">
 
                         </use>
                     </svg>
@@ -54,7 +54,7 @@
          <div class="modal">  
              <button class="knob-backdrop" data-modal-close>
                  <svg class="backdrop-svg">
-                     <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-close"></use>
+                     <use href="./images/svg/sprite.svg#icon-close"></use>
                  </svg>
              </button>
          </div>
@@ -70,7 +70,7 @@
         <li class="feature-1">
             <div class="div-peculiarities">
                 <svg class="antenna-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-antenna"></use>
+                    <use href="./images/svg/sprite.svg#icon-antenna"></use>
                 </svg>
             </div>
         <h3 class="headline5 h3-1">Внимание к деталям</h3>
@@ -79,7 +79,7 @@
         <li class="feature-2">
             <div class="div-peculiarities">
                 <svg class="clock-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-clock"></use>
+                    <use href="./images/svg/sprite.svg#icon-clock"></use>
                 </svg>
             </div>
             <h3 class="headline5 h3-2">Пунктуальность</h3>
@@ -88,7 +88,7 @@
         <li class="feature-3">
             <div class="div-peculiarities">
                 <svg class="diagram-svg ">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-diagram"></use>
+                    <use href="./images/svg/sprite.svg#icon-diagram"></use>
                 </svg>
             </div>
             <h3 class="headline5 h3-3">Планирование</h3>
@@ -97,7 +97,7 @@
         <li class="feature-4">
             <div class="div-peculiarities">
                 <svg class="astronaut-svg ">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-astronaut"></use>
+                    <use href="./images/svg/sprite.svg#icon-astronaut"></use>
                 </svg>
             </div>
             <h3 class="headline5 h3-4">Современные технологии</h3>
@@ -160,28 +160,28 @@
             <li class="instagram">
                 <a href="" class="instagram-link">
                 <svg class="instagram-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-instagram"></use>
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
                 </svg>
             </a>
             </li>
             <li class="twitter">
                 <a href="" class="twitter-link">
                 <svg class="twitter-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-twitter"></use>
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
             <li class="facebook">
                 <a href="" class="facebook-link">
                 <svg class="facebook-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-facebook"></use>
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
             <li class="linkedin">
                 <a href="" class="linkedin-link">
                 <svg class="linkedin-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                 </svg>
             </a>
             </li>
@@ -200,28 +200,28 @@
             <li class="instagram">
                 <a href="" class="instagram-link">
                 <svg class="instagram-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-instagram"></use>
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
                 </svg>
             </a>
             </li>
             <li class="twitter">
                 <a href="" class="twitter-link">
                 <svg class="twitter-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-twitter"></use>
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
             <li class="facebook">
                 <a href="" class="facebook-link">
                 <svg class="facebook-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-facebook"></use>
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
             <li class="linkedin">
                 <a href="" class="linkedin-link">
                 <svg class="linkedin-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                 </svg>
             </a>
             </li>
@@ -240,28 +240,28 @@
             <li class="instagram">
                 <a href="" class="instagram-link">
                 <svg class="instagram-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-instagram"></use>
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
                 </svg>
             </a>
             </li>
             <li class="twitter">
                 <a href="" class="twitter-link">
                 <svg class="twitter-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-twitter"></use>
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
             <li class="facebook">
                 <a href="" class="facebook-link">
                 <svg class="facebook-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-facebook"></use>
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
             <li class="linkedin">
                 <a href="" class="linkedin-link">
                 <svg class="linkedin-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                 </svg>
             </a>
             </li>
@@ -280,28 +280,28 @@
             <li class="instagram">
                 <a href="" class="instagram-link">
                 <svg class="instagram-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-instagram"></use>
+                    <use href="./images/svg/sprite.svg#icon-instagram"></use>
                 </svg>
             </a>
             </li>
             <li class="twitter">
                 <a href="" class="twitter-link">
                 <svg class="twitter-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-twitter"></use>
+                    <use href="./images/svg/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
             <li class="facebook">
                 <a href="" class="facebook-link">
                 <svg class="facebook-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-facebook"></use>
+                    <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
             <li class="linkedin">
                 <a href="" class="linkedin-link">
                 <svg class="linkedin-svg">
-                    <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                 </svg>
             </a>
             </li>
@@ -318,42 +318,42 @@
                 <li class="group">
                     <a href="" class="group-link">
                     <svg class="group-svg">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-group"></use>
+                        <use href="./images/svg/sprite.svg#icon-group"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="group">
                     <a href="" class="group-link">
                     <svg class="group-svg1">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-group1"></use>
+                        <use href="./images/svg/sprite.svg#icon-group1"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="group">
                     <a href="" class="group-link">
                     <svg class="group-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-group2"></use>
+                        <use href="./images/svg/sprite.svg#icon-group2"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="group">
                     <a href="" class="group-link">
                     <svg class="group-svg3">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-group3"></use>
+                        <use href="./images/svg/sprite.svg#icon-group3"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="group">
                     <a href="" class="group-link">
                     <svg class="group-svg4">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-group4"></use>
+                        <use href="./images/svg/sprite.svg#icon-group4"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="group">
                     <a href="" class="group-link">
                     <svg class="group-svg5">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-group5"></use>
+                        <use href="./images/svg/sprite.svg#icon-group5"></use>
                     </svg>
                 </a>
                 </li>
@@ -384,28 +384,28 @@
                 <li class="instagram2">
                     <a href="" class="instagram-link2">
                     <svg class="instagram-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-instagram"></use>
+                        <use href="./images/svg/sprite.svg#icon-instagram"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="twitter2">
                     <a href="" class="twitter-link2">
                     <svg class="twitter-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-twitter"></use>
+                        <use href="./images/svg/sprite.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="facebook2">
                     <a href="" class="facebook-link2">
                     <svg class="facebook-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-facebook"></use>
+                        <use href="./images/svg/sprite.svg#icon-facebook"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="linkedin2">
                     <a href="" class="linkedin-link2">
                     <svg class="linkedin-svg2">
-                        <use href="/goit-markup-hw-04/images/svg/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                     </svg>
                 </a>
                 </li>
