--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
                     <p class="paragraph1">Маркетинг</p>
                 </a>
                 </li>
-                <li class="filter-9">
+                <li class="filter-9 shadow-filtres">
                     <a href="" class="filtres-link shadow-filtres">
                         <div class="filtres-top-wrap">
                     <img src="images/img15.jpg" alt="Growing Business" width="370">
